--- a/src/app/settings/containers/settings/settings.component.html
+++ b/src/app/settings/containers/settings/settings.component.html
@@ -2,7 +2,7 @@
 <div class="settings-container">
   <cs-security-settings
     [settings]="settings$ | async"
-    (updatePassword)="onUpdatePassword($event)"
+    (passwordChange)="onPasswordChange($event)"
     (sessionTimeoutChange)="onSessionTimeoutChange($event)"
     (isSavePasswordForVMsChange)="onIsSavePasswordForVMsChange($event)"
   ></cs-security-settings>
@@ -12,6 +12,10 @@
     [apiDocumentationLink]="apiDocumentationLink$ | async"
     (regenerateKeys)="onRegenerateKeys()"
   ></cs-api-settings>
+  <cs-vm-settings
+    [settings]="settings$ | async"
+    (keyboardLayoutChange)="onKeyboardLayoutChange($event)"
+  ></cs-vm-settings>
   <cs-interface-settings
     [settings]="settings$ | async"
     (interfaceLanguageChange)="onInterfaceLanguageChange($event)"
