--- a/src/app/service-offering/service-offering-list/service-offering-list.component.html
+++ b/src/app/service-offering/service-offering-list/service-offering-list.component.html
@@ -80,9 +80,12 @@
 
       </table>
     </div>
-
   </ng-container>
 </div>
+
+<mat-error *ngIf="resourcesLimitExceeded">
+  {{ 'ERRORS.COMPUTE_OFFERING.RESOURCE_LIMIT_EXCEEDED' | translate }}
+</mat-error>
 
 <cs-no-results *ngIf="!offeringList?.length && !isLoading"></cs-no-results>
 
