fixup! refactor: update a disk offering list view

--- a/src/app/shared/components/disk-offering/disk-offering-dialog/disk-offering-dialog.component.scss
+++ b/src/app/shared/components/disk-offering/disk-offering-dialog/disk-offering-dialog.component.scss
@@ -41,9 +41,9 @@ table {
     &:last-child {
       padding-right: 0;
     }
-
-    & .text-right {
-      text-align: right;
-    }
   }
+}
+
+.text-right {
+  text-align: right;
 }
