fixes after review

--- a/src/app/shared/components/disk-offering/disk-offering-dialog/disk-offering-dialog.component.html
+++ b/src/app/shared/components/disk-offering/disk-offering-dialog/disk-offering-dialog.component.html
@@ -104,7 +104,7 @@
     mat-button
     color="primary"
     type="submit"
-    [disabled]="isSubmitButtonDisabled() || resourcesLimitExceeded"
+    [disabled]="isSubmitButtonDisabled()"
     (click)="onSubmit()"
   >
     {{ 'COMMON.SELECT' | translate }}
