--- a/src/app/template/template-tags/template-tags.component.html
+++ b/src/app/template/template-tags/template-tags.component.html
@@ -1,8 +1,9 @@
-<cs-tags-view
-  [tags]="tags$ | async"
-  [canAddTag]="!entity.isfeatured"
-  [hasPermissions]="hasPermissions"
-  (onTagAdd)="onTagAdd($event)"
-  (onTagEdit)="onTagEdit($event)"
-  (onTagDelete)="onTagDelete($event)"
-></cs-tags-view>
+<div *ngIf="entity">
+  <cs-tags-view
+    [tags]="tags"
+    [hasPermissions]="hasPermissions"
+    (onTagAdd)="addTag($event)"
+    (onTagEdit)="editTag($event)"
+    (onTagDelete)="deleteTag($event)"
+  ></cs-tags-view>
+</div>
