replace mat error by span, and fix test

--- a/src/app/service-offering/custom-service-offering/custom-service-offering.component.html
+++ b/src/app/service-offering/custom-service-offering/custom-service-offering.component.html
@@ -47,9 +47,9 @@
     </mat-form-field>
   </div>
 
-  <mat-error *ngIf="!offering.isAvailableByResources">
+  <span class="error-message" *ngIf="!offering.isAvailableByResources">
     {{ 'ERRORS.COMPUTE_OFFERING.RESOURCE_LIMIT_EXCEEDED' | translate }}
-  </mat-error>
+  </span>
 
   <div class="mat-dialog-actions">
     <button
