--- a/src/app/service-offering/service-offering-dialog/service-offering-dialog.component.html
+++ b/src/app/service-offering/service-offering-dialog/service-offering-dialog.component.html
@@ -26,9 +26,9 @@
       *ngIf="showRebootMessage"
     >{{ "SERVICE_OFFERING.VM_WILL_BE_RESTARTED" | translate }}
     </div>
-    <mat-error *ngIf="!serviceOffering.isAvailableByResources && isSelectedOfferingViewMode()">
+    <span class="error-message" *ngIf="!serviceOffering.isAvailableByResources && isSelectedOfferingViewMode()">
       {{ 'ERRORS.COMPUTE_OFFERING.RESOURCE_LIMIT_EXCEEDED' | translate }}
-    </mat-error>
+    </span>
   </div>
 
 
