fix(password-change): fix event binding

--- a/src/app/settings/components/secuirity-settings/security-settings.component.html
+++ b/src/app/settings/components/secuirity-settings/security-settings.component.html
@@ -3,7 +3,7 @@
   <div class="settings-section-content">
 
     <cs-password-update-form
-      (updatePassword)="passwordChange.emit($event)"
+      (passwordChange)="passwordChange.emit($event)"
     ></cs-password-update-form>
 
     <cs-session-timeout
