--- a/src/app/shared/components/draggable-select/draggable-select.component.html
+++ b/src/app/shared/components/draggable-select/draggable-select.component.html
@@ -38,7 +38,7 @@
     class="mat-select-panel draggable-select-panel {{ _getPanelTheme() }}"
     [ngClass]="panelClass"
     [@transformPanel]="multiple ? 'showing-multiple' : 'showing'"
-    (@transformPanel.done)="_onPanelDone()"
+    (@transformPanel.done)="_panelDoneAnimatingStream.next($event.toState)"
     [style.transformOrigin]="_transformOrigin"
     [class.mat-select-panel-done-animating]="_panelDoneAnimating"
     [style.font-size.px]="_triggerFontSize"
