--- a/src/app/vm/vm-actions/vm-actions-component/vm-access.component.html
+++ b/src/app/vm/vm-actions/vm-actions-component/vm-access.component.html
@@ -6,54 +6,92 @@
       <mat-tab [disabled]="!act.available(vm)" [label]="act.name | translate">
         <ng-container *ngIf="i === 0 || i === 2">
           <div class="parameter-wrapper">
-            <h4><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}</b>
+            <h4><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}:</b>
               {{ getUrlLogin(vm) }}
             </h4>
             <h4>
-              <b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}</b> {{ getUrlPassword(vm) }}
+              <b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}:</b>
+              {{ getUrlPassword(vm) }}
+            </h4>
+            <h4 *ngIf="i === 2">
+              <b>{{ 'VM_POST_ACTION.OPEN_URL' | translate }}:</b>
+
+              <cs-input-group>
+                <mat-form-field cs-input-group-textbox>
+                  <input matInput [value]="getAddress(vm)" readonly>
+                </mat-form-field>
+                <cs-clipboard-button
+                  cs-input-group-button
+                  [value]="getAddress(vm)"
+                  tooltipPosition="below"
+                ></cs-clipboard-button>
+              </cs-input-group>
             </h4>
           </div>
-          <button
-            mat-button
-            color="primary"
-            (click)="act.activate(vm)"
-          >{{ act.actionName | translate }}
-          </button>
+
+          <div *ngIf="i === 0" class="action-link">
+            <a (click)="act.activate(vm)">
+              {{ act.actionName | translate }}
+            </a>
+          </div>
         </ng-container>
         <ng-container *ngIf="i === 1">
           <div class="parameter-wrapper">
-            <div class="parameter-item">
-              <cs-parameters-pair
-                [canBeCopy]="true"
-                [name]="'VM_POST_ACTION.CONNECTION_STRING'"
-                [value]="getConnectionString(vm)">
-              </cs-parameters-pair>
-            </div>
-            <h4 *ngIf="vm.nic[0]?.ipaddress"><b>{{ 'VM_POST_ACTION.VM_IP' | translate }}:</b>
+            <h4 class="height-container">
+              <b>{{ 'VM_POST_ACTION.CONNECTION_STRING_4' | translate }}:</b>
+              <cs-input-group>
+                <mat-form-field cs-input-group-textbox>
+                  <input matInput [value]="getConnectionString(vm, vm.nic[0].ipaddress)" readonly>
+                </mat-form-field>
+                <cs-clipboard-button
+                  cs-input-group-button
+                  [value]="getConnectionString(vm, vm.nic[0].ipaddress)"
+                  tooltipPosition="below"
+                ></cs-clipboard-button>
+              </cs-input-group>
+            </h4>
+            <h4 class="height-container">
+              <b>{{ 'VM_POST_ACTION.CONNECTION_STRING_6' | translate }}:</b>
+              <cs-input-group>
+                <mat-form-field cs-input-group-textbox>
+                  <input matInput [value]="getConnectionString(vm, vm.nic[0].ip6address)" readonly>
+                </mat-form-field>
+                <cs-clipboard-button
+                  cs-input-group-button
+                  [value]="getConnectionString(vm, vm.nic[0].ip6address)"
+                  tooltipPosition="below"
+                ></cs-clipboard-button>
+              </cs-input-group>
+            </h4>
+            <h4 *ngIf="vm.nic[0]?.ipaddress"><b>{{ 'VM_POST_ACTION.IPv4' | translate }}:</b>
               {{ vm.nic[0].ipaddress }}
             </h4>
-            <h4><b>{{ 'VM_POST_ACTION.PORT' | translate }}</b>
+            <h4 *ngIf="vm.nic[0]?.ipaddress"><b>{{ 'VM_POST_ACTION.IPv6' | translate }}:</b>
+              {{ vm.nic[0].ip6address }}
+            </h4>
+            <h4><b>{{ 'VM_POST_ACTION.PORT' | translate }}:</b>
               {{ getSSHPort(vm) }}
             </h4>
-            <h4><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}</b>
+            <h4><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}:</b>
               {{ getSSHLogin(vm) }}
             </h4>
             <h4>
-              <b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}</b>
+              <b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}:</b>
               {{ getSSHPassword(vm) }}
             </h4>
             <h4 *ngIf="vm.keyPair">
-              <b>{{ 'VM_POST_ACTION.SSH_KEY' | translate }}</b>
-              {{ vm.keyPair }}
+              <b>{{ 'VM_POST_ACTION.SSH_KEY' | translate }}:</b>
+              <span *ngFor=" let key of getSSHKeys(vm.keyPair); let isLast=last">
+                {{ key }}{{ isLast ? '' : ', ' }}
+              </span>
             </h4>
           </div>
-          <button
-            *ngIf="isWebShellEnabled()"
-            mat-button
-            color="primary"
-            (click)="act.activate(vm)"
-          >{{ act.actionName | translate }}
-          </button>
+          <div *ngIf="isWebShellEnabled()"
+               class="action-link">
+            <a (click)="act.activate(vm)">
+              {{ act.actionName | translate }}
+            </a>
+          </div>
         </ng-container>
       </mat-tab>
     </ng-container>
