--- a/src/app/vm/vm-actions/vm-actions-component/vm-access.component.scss
+++ b/src/app/vm/vm-actions/vm-actions-component/vm-access.component.scss
@@ -29,3 +29,20 @@ h4 {
      }
   }
 }
+
+.action-link {
+  cursor: pointer;
+  padding-left: 15px;
+}
+
+.height-container {
+  min-height: 32px !important;
+}
+
+cs-input-group {
+  padding-left: 10px;
+
+  mat-form-field {
+    padding-top: 0.2em;
+  }
+}
