feat(vm-creation): vm creation dialog enhancements (#1292)
* feat(vm-creation): vm creation dialog enchancements

* feat(vm-creation): add description to config

* feat(vm-creation): rename default group in reducer

* fixes after angular updating

* update after removing keyboard

* fix lint

* fixes after review

* fixes after review

* fix style

* change conditional for slider showing

* after review

* fix bug

* remove maxRootDiskSize

* fix test

* fix test

* remove maxRootDiskSize from interface, rename const

* fix vm effects: if is Template then min value = template size, when is Iso with custom disk offering min value is 10

--- a/src/app/vm/vm-sidebar/network-detail/firewall-rules/firewall-rules-detail.component.html
+++ b/src/app/vm/vm-sidebar/network-detail/firewall-rules/firewall-rules-detail.component.html
@@ -11,7 +11,9 @@
         class="row"
         *ngFor="let group of vm.securityGroup"
       >
-        <span class="sg-name">{{ group.name }}</span>
+        <span class="sg-name">
+          {{ group.name }}
+        </span>
         <button
           mat-icon-button
           class="mat-icon-button mat-icon-button--small"
